@@ -1,0 +1,56 @@
+%define __strip %{_mingw32_strip}
+%define __objdump %{_mingw32_objdump}
+%define _use_internal_dependency_generator 0
+%define __find_requires %{_mingw32_findrequires}
+%define __find_provides %{_mingw32_findprovides}
+
+%define name mingw32-varconf
+%define version @VERSION@
+%define release 1
+%define libsuffix @VARCONF_LIB_SUFFIX@
+
+Summary: A config handling library.
+Name: %{name}
+Version: %{version}
+Release: %{release}
+License: LGPL
+Group: System Environment/Libraries
+URL: http://www.worldforge.org/dev/eng/libraries/varconf
+Packager: Al Riddoch <alriddoch@googlemail.com>
+Vendor: WorldForge
+Distribution: Mason
+Source: varconf-%{version}.tar.bz2
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
+BuildArch: noarch
+BuildRequires:  mingw32-filesystem >= 49
+BuildRequires:  mingw32-gcc
+BuildRequires:  mingw32-binutils
+
+%description
+@PACKAGE@ is a configuration system originally designed for the STAGE
+server. @PACKAGE@ can parse configuration files, command-line arguments
+and environment variables. It supports callbacks through libsigc++ 2.0.x
+and can store configuration data in configuration objects or one global
+configuration instance.
+
+%prep
+%setup -q -n varconf-%{version}
+
+%build
+PKG_CONFIG_LIBDIR=/usr/i686-pc-mingw32/sys-root/mingw/lib/pkgconfig \
+  %{_mingw32_configure} --enable-static --disable-shared
+make
+
+%install
+rm -rf $RPM_BUILD_ROOT
+make DESTDIR=$RPM_BUILD_ROOT install
+rm $RPM_BUILD_ROOT%{_mingw32_libdir}/lib*.la
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+%files
+%defattr(-,root,root)
+%{_mingw32_libdir}/lib*.a
+%{_mingw32_libdir}/pkgconfig/*
+%{_mingw32_includedir}/varconf%{libsuffix}
